# VEX-ROS2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  initialize.sh  start.sh
model/: .gitignore  CMakeLists.txt  manager.sh  package.xml
model/src/: down.cpp  drummer.cpp  fast_tanh.cpp  full_controller.cpp  full_torque.cpp  hco.cpp  hco_adapt.cpp  hco_process.cpp  model.cpp  model.hpp  simulator.cpp  simulator.hpp  template.cpp  template_hco.cpp  testModel.cpp
model/src/before/: model.cpp  model_old.cpp  template.cpp  template_hco.cpp  template_manager.cpp
vex_brain/: .gitignore  manager.sh  package.xml  setup.cfg  setup.py  vex_config
vex_brain/launch/: vex_launch.launch.py
vex_brain/vex_brain/: talker.py  vex_inertial.py  vex_motor.py  vex_rotation_sensor.py  vex_screen.py  vex_threewire.py
vex_code/: makefile  vex_code.v5cpp
vex_code/include/: vex.h
vex_log/: .gitignore  manager.sh  package.xml  setup.cfg  setup.py  test_socket.py
vex_log/client/: client.py
vex_log/vex_log/: logger.py  server.py
vex_message/: CMakeLists.txt  package.xml
vex_message/msg/: Drawcircle.msg  Drawline.msg  Vexcommand.msg  Vexinertial.msg  Vexmotor.msg  Vexmsg.msg  Vexrotationsensor.msg  Vexscreen.msg  Vexthreewire.msg
vex_plot/: package.xml  setup.cfg  setup.py
vex_plot/vex_plot/: server.py
